--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ body {
   font-size: 16px;
 }
 .select-style option {
-  background-color: rgb(252, 250, 250);
+  background-color:white;
   color: rgb(191, 183, 183);
   font-size: 18px;
   border: none;
